docs/dolfin/1.1.0/python/source/programmers-reference/cpp/mesh/index.rst
.. Index file for the dolfin.cpp.mesh module.

.. _programmers_reference_cpp_mesh_index:

dolfin.cpp.mesh module
**********************

Classes:

.. toctree::
    :maxdepth: 1

    ALE
    BoostGraphOrdering
    BoundaryMesh
    Box
    BoxMesh
    CSGCGALMeshGenerator2D
    CSGCGALMeshGenerator3D
    CSGDifference
    CSGGeometries
    CSGGeometry
    CSGIntersection
    CSGMeshGenerator
    CSGOperator
    CSGPrimitive
    CSGPrimitive2D
    CSGPrimitive3D
    CSGUnion
    Cell
    CellFunction
    CellFunctionBool
    CellFunctionDouble
    CellFunctionInt
    CellFunctionSizet
    CellType
    Circle
    Cone
    Cylinder
    DomainBoundary
    DynamicMeshEditor
    Edge
    EdgeFunction
    EdgeFunctionBool
    EdgeFunctionDouble
    EdgeFunctionInt
    EdgeFunctionSizet
    Ellipse
    Face
    FaceFunction
    FaceFunctionBool
    FaceFunctionDouble
    FaceFunctionInt
    FaceFunctionSizet
    Facet
    FacetCell
    FacetFunction
    FacetFunctionBool
    FacetFunctionDouble
    FacetFunctionInt
    FacetFunctionSizet
    Graph
    GraphBuilder
    HierarchicalFunction
    HierarchicalFunctionSpace
    HierarchicalMesh
    HierarchicalMeshFunctionBool
    HierarchicalMeshFunctionDouble
    HierarchicalMeshFunctionInt
    HierarchicalMeshFunctionSizet
    HierarchicalMeshFunctionUInt
    IntersectionOperator
    IntervalMesh
    LocalMeshData
    Mesh
    MeshColoring
    MeshConnectivity
    MeshData
    MeshDomains
    MeshEditor
    MeshEntity
    MeshFunction
    MeshFunctionBool
    MeshFunctionDouble
    MeshFunctionInt
    MeshFunctionSizet
    MeshGeometry
    MeshPartitioning
    MeshRenumbering
    MeshTopology
    MeshTransformation
    MeshValueCollection
    MeshValueCollectionBool
    MeshValueCollectionDouble
    MeshValueCollectionInt
    MeshValueCollectionSizet
    Point
    PointPrimitive
    Polygon
    PolygonalMeshGenerator
    PolyhedralMeshGenerator
    PrimitiveIntersector
    Rectangle
    RectangleMesh
    Restriction
    SCOTCH
    Sphere
    SubDomain
    SubMesh
    SubsetIterator
    Surface3D
    Tetrahedron
    Triangulate
    UnitCircle
    UnitCircleMesh
    UnitCube
    UnitCubeMesh
    UnitInterval
    UnitIntervalMesh
    UnitSquare
    UnitSquareMesh
    UnitTetrahedronMesh
    UnitTriangleMesh
    Vertex
    VertexFunction
    VertexFunctionBool
    VertexFunctionDouble
    VertexFunctionInt
    VertexFunctionSizet
    cells
    edges
    entities
    faces
    facets
    vertices

Functions:

.. toctree::
    :maxdepth: 1

    ALE_move
    BoostGraphOrdering_compute_cuthill_mckee
    CSGCGALMeshGenerator2D_default_parameters
    CSGCGALMeshGenerator3D_default_parameters
    CSGMeshGenerator_generate
    CellType_create
    CellType_string2type
    CellType_type2string
    GraphBuilder_compute_dual_graph
    GraphBuilder_compute_dual_graph_small
    GraphBuilder_local_boost_graph
    GraphBuilder_local_graph
    MeshColoring_cell_colors
    MeshColoring_color
    MeshColoring_color_cells
    MeshColoring_compute_colors
    MeshColoring_type_to_dim
    MeshDomains_mesh_function
    MeshPartitioning_build_distributed_mesh
    MeshTransformation_rotate
    PolygonalMeshGenerator_generate
    PolyhedralMeshGenerator_generate
    PolyhedralMeshGenerator_generate_surface_mesh
    PrimitiveIntersector_do_intersect
    PrimitiveIntersector_do_intersect_exact
    Triangulate_triangulate
    refine

Module docstring:

.. automodule:: dolfin.cpp.mesh
   :no-members:
   :no-undoc-members:
   :no-show-inheritance: